--- a/연습.HTML
+++ b/연습.HTML
@@ -1,83 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>
-      <b>제목</b>태그1
-      <span>span<strong> 태그  </strong></span>
-      <span>span태그</span>
-    </h1>
-    <p>문단태그<span>span태그</span><span>span태그</span></p>
-    
-      <div>영역분할<span>span태그</span><span>span태그</span></div>
-    </small> 영역분할
-    <span>span태그<span>span태그</span><span>span태그</span></span>
-    <p>
-      헌법재판소는 법률에 저촉되지 아니하는 범위안에서 심판에 관한 절차,집갈래요
-      내부규율과 사무처리에 관한 규칙을 제정할 수 있다. 군사재판을 관할하기
-      위하여 특별법원으로서 군사법원을 둘 수 있다. 국가는 모성의 보호를 위하여
-      노력하여야 한다. 국회의원의 수는 법률로 정하되, 200인 이상으로 한다.
-      신체장애자 및 질병·노령 기타의 사유로 생활능력이 없는 국민은 법률이 정하는
-      바에 의하여 국가의 보호를 받는다. 국무위원은 국정에 관하여 대통령을
-      보좌하며, 국무회의의 구성원으로서 국정을 심의한다. 대통령의 선거에 관한
-      사항은 법률로 정한다. 대통령은 법률이 정하는 바에 의하여 훈장 기타의
-      영전을 수여한다. 모든 국민은 주거의 자유를 침해받지 아니한다. 주거에 대한
-      압수나 수색을 할 때에는 검사의 신청에 의하여 법관이 발부한 영장을
-      제시하여야 한다. 대통령이 제1항의 기간내에 공포나 재의의 요구를 하지
-      아니한 때에도 그 법률안은 법률로서 확정된다. 국회의 회의는 공개한다. 다만,
-      출석의원 과반수의 찬성이 있거나 의장이 국가의 안전보장을 위하여 필요하다고
-      인정할 때에는 공개하지 아니할 수 있다. 혼인과 가족생활은 개인의 존엄과
-      양성의 평등을 기초로 성립되고 유지되어야 하며, 국가는 이를 보장한다.
-      예비비는 총액으로 국회의 의결을 얻어야 한다. 예비비의 지출은 차기국회의
-      승인을 얻어야 한다. 모든 국민은 법률이 정하는 바에 의하여 선거권을 가진다.
-      모든 국민은 종교의 자유를 가진다. 공무원의 신분과 정치적 중립성은 법률이
-      정하는 바에 의하여 보장된다. 대통령의 임기가 만료되는 때에는 임기만료 70일
-      내지 40일전에 후임자를 선거한다. 국가안전보장회의는 대통령이 주재한다.
-      대통령의 임기연장 또는 중임변경을 위한 헌법개정은 그 헌법개정 제안 당시의
-      대통령에 대하여는 효력이 없다. 대한민국의 경제질서는 개인과 기업의
-      경제상의 자유와 창의를 존중함을 기본으로 한다. 헌법재판소는 법관의 자격을
-      가진 9인의 재판관으로 구성하며, 재판관은 대통령이 임명한다. 대통령이
-      임시회의 집회를 요구할 때에는 기간과 집회요구의 이유를 명시하여야 한다.
-      국가는 주택개발정책등을 통하여 모든 국민이 쾌적한 주거생활을 할 수 있도록
-      노력하여야 한다.
-    </p>
-    <p>
-      헌법재판소는 법률에 저촉되지 아니하는 범위안에서 심판에 관한 절차,
-      내부규율과 사무처리에 관한 규칙을 제정할 수 있다. 군사재판을 관할하기
-      위하여 특별법원으로서 군사법원을 둘 수 있다. 국가는 모성의 보호를 위하여
-      노력하여야 한다. 국회의원의 수는 법률로 정하되, 200인 이상으로 한다.
-      신체장애자 및 질병·노령 기타의 사유로 생활능력이 없는 국민은 법률이 정하는
-      바에 의하여 국가의 보호를 받는다. 국무위원은 국정에 관하여 대통령을
-      보좌하며, 국무회의의 구성원으로서 국정을 심의한다. 대통령의 선거에 관한
-      사항은 법률로 정한다. 대통령은 법률이 정하는 바에 의하여 훈장 기타의
-      영전을 수여한다. 모든 국민은 주거의 자유를 침해받지 아니한다. 주거에 대한
-      압수나 수색을 할 때에는 검사의 신청에 의하여 법관이 발부한 영장을
-      제시하여야 한다. 대통령이 제1항의 기간내에 공포나 재의의 요구를 하지
-      아니한 때에도 그 법률안은 법률로서 확정된다. 국회의 회의는 공개한다. 다만,
-      출석의원 과반수의 찬성이 있거나 의장이 국가의 안전보장을 위하여 필요하다고
-      인정할 때에는 공개하지 아니할 수 있다. 혼인과 가족생활은 개인의 존엄과
-      양성의 평등을 기초로 성립되고 유지되어야 하며, 국가는 이를 보장한다.
-      예비비는 총액으로 국회의 의결을 얻어야 한다. 예비비의 지출은 차기국회의
-      승인을 얻어야 한다. 모든 국민은 법률이 정하는 바에 의하여 선거권을 가진다.
-      모든 국민은 종교의 자유를 가진다. 공무원의 신분과 정치적 중립성은 법률이
-      정하는 바에 의하여 보장된다. 대통령의 임기가 만료되는 때에는 임기만료 70일
-      내지 40일전에 후임자를 선거한다. 국가안전보장회의는 대통령이 주재한다.
-      대통령의 임기연장 또는 중임변경을 위한 헌법개정은 그 헌법개정 제안 당시의
-      대통령에 대하여는 효력이 없다. 대한민국의 경제질서는 개인과 기업의
-      경제상의 자유와 창의를 존중함을 기본으로 한다. 헌법재판소는 법관의 자격을
-      가진 9인의 재판관으로 구성하며, 재판관은 대통령이 임명한다. 대통령이
-      임시회의 집회를 요구할 때에는 기간과 집회요구의 이유를 명시하여야 한다.
-      국가는 주택개발정책등을 통하여 모든 국민이 쾌적한 주거생활을 할 수 있도록
-      노력하여야 한다.
-    </p>
-  <p>h20x2   </p>
-   <p>h20x2   </p>
-  <p>h<sub>2</sub><sup>0x</sup>2   </p>
-  <p><ins>H2O</ins><del>x2 </del></p>
-  <P><mark>하이라이트된글자</mark>  </P>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
 </html>
