--- a/유엘비뇨의학과.html
+++ b/유엘비뇨의학과.html
@@ -1,34 +1,19 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<style>
-	h1,h2,p{ text-align: center;
-
-}
-img{
-	width: 1300px;
-}
-
-	</style>
 </head>
-
 <body>
+<h3>
+	다르게 더 바르게 만듭니다.<br />
+</h3>
+<br>
+
+<h2> <strong>정성을담아,바르게</strong>
+
+
 	
-	<h1>비뇨의학을 선도하는<br>
-
-  유웰비뇨의학과 전문의료진 16인
-  </h1>
-  <h2> 비수술 · 수술 다각적 초개인화 맞춤 진료
-</h2>
-<p>유웰비뇨의학과는 표준화, 과학화, 근치적 치료로 비뇨의학의 발전을 선도한다는 목표 실현과<br>
-최상의 의료환경을 갖추고 전립선, 요로결석, 정계정맥류, 정관복원, 요실금 등 특수 비뇨기 질환까지<br>
-의료영역을 확대하며, 비수술 수술 초개인화 맞춤치료를 다각적 접근으로 시행하고 있습니다.
-<img src="https://www.uwurology.com/inc/img/sub/medical_staff_visual.jpg" alt="이미지">
-
-
-</p>
 </body>
 </html>
