--- a/FLEX2.html
+++ b/FLEX2.html
@@ -10,34 +10,20 @@
 		}
 		.container1{
 			display: flex;
-			justify-content: center;
-			align-items: flex-start;
-
-			
+			gap: 40px;
+			width: 1200px;	
 		}
-		.container2 {
-			display: inline-flex;
-		}
-		.container3 {
-			display: flex;
-		  width: 500px;
-			flex-direction: column;
-			justify-content: center;
-			justify-content: flex-end;
-		}
-
 		.flex{
 			background: #ccc;
 			margin: 20px;
 			padding: 20px;
 			height: 500px;
-		}
+		} 
 		.item{
 			background: red;
 			border: 1px solid;
-			/* width: 200px; */
+			width:50%;
 		}
-		
 	</style>
 </head>
 <body>
@@ -45,16 +31,9 @@
    <div class="item">1</div>
    <div class="item">2</div>
    <div class="item">3</div>
+   <div class="item">4</div>
+   <div class="item">5</div>
 </div>
-	<div class="flex container2">
-   <div class="item">1</div>
-   <div class="item">2</div>
-   <div class="item">3</div>
-</div>
-	<div class="flex container3">
-   <div class="item">1</div>
-   <div class="item">2</div>
-   <div class="item">3</div>
-</div>
+
 </body>
 </html>
