--- a/윤태민.html
+++ b/윤태민.html
@@ -11,29 +11,29 @@
 		padding: 0;
 	}
 
+.flex{
+	background: #ccc;
+	display: flex;
+	gap: 20px;
+	flex-wrap: wrap;
+	height: 200px;
+	align-content: center;
 
- div{
 
-	height: 1000px;
-	text-align: center;
+}
 
 
 
- }
 
-	
  
   
 </style>
 <body>
-	<div>
-		<ul>
-			<li>
-		소개합니다
-			</li>
-		</ul>
-	</div>
-
+<div class="flex">
+   <div class="item">소개합니다</div>
+   <div class="item">ㅇㅇ</div>
+   <div class="item">3ㅇㅇ</div>
+</div>
 </body>
 		
 			</html>
