--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<style>
+
+
+
+	</style>
 </head>
 <body>
 <ul>
 	<li>
-		
+		<img src="" alt="">
 	</li>
 </ul>
 </body>
