--- a/트랜스폼2.html
+++ b/트랜스폼2.html
@@ -11,13 +11,40 @@
 	div{width: 400px;
 		height: 400px;
 	  margin: 100px auto;
-	  position: relative;}
+	  position: relative;
+		perspective: 800px;
+	}
 		div img{
 			position: absolute;
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
 		}
+		div img {
+			
+		}
+	 div img:nth-child(1){
+		transform: translateZ(-200px);
+		z-index: 1;
+	 }
+		
+	 div img:nth-child(6){
+		transform: translateZ(200px);
+		opacity: 0.5;
+	 }
+		
+	 div img:nth-child(2){
+		transform: rotateX(90deg) translateZ(200px);
+	 }
+	 div img:nth-child(3){
+		transform: rotateX(-90deg) translateZ(200px);
+	 }
+	 div img:nth-child(4){
+		transform: rotateY(-90deg) translateZ(200px);
+	 }
+	 div img:nth-child(5){
+		transform: rotateY(90deg) translateZ(200px);
+	 }
 		
 </style>
 
