--- a/윤태민.html
+++ b/윤태민.html
@@ -114,7 +114,7 @@ body {
   <div class="profile">
     <h1>홍길동</h1>
     <p>
-      안녕하세요! 저는 웹 개발과 디자인을 공부하는 홍길동입니다.<br>
+      안녕하세요! 저는 웹 개발과 디자인을 공부하는 윤태민입니다.<br>
       사용자에게 편리하고 직관적인 UI/UX를 만드는 것을 좋아합니다.
     </p>
     <div class="links">
