--- a/극동건설.html
+++ b/극동건설.html
@@ -60,7 +60,7 @@
   na a spwan
   <body>
     <ul class="gnb">
-      <li><a href="#">투혼스토리</a></li>
+      <li><a href="https://www.daesung.co.kr/">투혼스토리</a></li>
       <li><a href="#">WHY 투혼</a></li>
       <li><a href="#">처음이신가요?</a></li>
       <li><a href="#">이벤트</a></li>
