--- a/매드포갈릭2.html
+++ b/매드포갈릭2.html
@@ -25,7 +25,8 @@
         background: #000;
       }
       .top {
-        width: 1504px;
+        width: 100%;
+        max-width: 1504px;
         margin: 0 auto;
         display: flex;
         justify-content: space-between;
