--- a/윤태민.html
+++ b/윤태민.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>yuntaemin</title>
-</head>
-<body>
-  <ul class="">
-    <li>
-      <a href=""></a>
-    </li>
-  </ul>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <ul>
+      <li>
+        <p>
+          <a href=""
+            ><img
+              src="https://m.media-amazon.com/images/I/61vO1bYfU9L._SX3000_.jpg"
+              alt=""
+          /></a>
+        </p>
+      </li>
+    </ul>
+  </body>
 </html>
