--- a/오뚜기.html
+++ b/오뚜기.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <p></p>
+    <h2>인류 식생활을 향상시키는 글로벌 식품 기업</h2>
   </body>
 </html>
