--- a/제주삼다수3.html
+++ b/제주삼다수3.html
@@ -9,6 +9,13 @@
         margin: 0;
         padding: 0;
       }
+      ul{
+        list-style: none;
+      }
+      a{
+        text-decoration: none;
+        color: #333;
+      }
       section {
         width: 100%;
         height: 100vh;
