--- a/table3.html
+++ b/table3.html
@@ -20,10 +20,10 @@
     table tr th {
       border: 1px solid;
       padding: 20px;
-			text-align: center;
-			font-weight: bold;
-			height: 200px;
-			vertical-align: top;
+      text-align: center;
+      font-weight: bold;
+      height: 200px;
+      tical-align: top;
     }
     table tr td:first-child {
       width: 50%;
