--- a/한화이글스클론페이지.html
+++ b/한화이글스클론페이지.html
@@ -13,17 +13,24 @@
   </style>
   <body>
    <section>
+   
 		<div>
 			<ul class="logo">
 				<li>
-					<a href="https://www.hanwhaeagles.co.kr/index.do">
-						<img src="https://www.hanwhaeagles.co.kr/index.do" alt="">
+					<a href="">
+						<img src="https://www.hanwhaeagles.co.kr/images/common/h_logo.png" alt="">
 					</a>
 				</li>
 				<li><a href=""></a>EAGLES</li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li><a href=""></a>PLAYERS</li>
+				<li><a href=""></a>GAME</li>
+				<li><a href=""></a>FAN</li>
+				<li><a href=""></a>SHOP</li>
+				<li><a href=""></a>TICKET</li>
+         <video autoplay muted loop playsinline>
+      <source src="./video/movie_eagles.mp4" >
+
+    </video>
 			</ul>
 		</div>
 
