--- a/두산로보틱스.html
+++ b/두산로보틱스.html
@@ -5,52 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-	
+
   <style>
-@font-face {
-    font-family: 'Pretendard';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Thin.woff') format('woff');
-    font-weight: 400;
-    font-display: swap;
-}
+    @font-face {
+      font-family: "Pretendard";
+      src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Thin.woff")
+        format("woff");
+      font-weight: 400;
+      font-display: swap;
+    }
 
     * {
       margin: 0;
       padding: 0;
     }
     .edu {
-      width: 1680px;
-      height: 780px;
+      width: 95%;
+      max-width: 1680px;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      grid-template-areas:
-        "item1 item2 item3 item3"
-        "item1 item4 item5 item6";
+      grid-template-columns: repeat(4, 1fr);
+
       gap: 24px;
     }
+    .edu .item img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+
+    .edu .item {
+      overflow: hidden;
+      border-radius: 20px;
+    }
     .edu .item:nth-child(1) {
-      grid-area: item1;
+      grid-row: 1 / span 2;
     }
     .edu .item:nth-child(2) {
-      grid-area: item2;
-			font-family: 'pretendard';
-			
+      font-family: "pretendard";
     }
 
     .edu .item:nth-child(3) {
-      grid-area: item3;
+      grid-column: 3 / span 2;
     }
-    .edu .item:nth-child(4) {
-      grid-area: item4;
-    }
-    .edu .item:nth-child(5) {
-      grid-area: item5;
-    }
+
     .edu .item:nth-child(6) {
-      grid-area: item6;
-			font-family: 'pretendard';
+      font-family: "pretendard";
+    }
+    @media screen and (max-width: 1280px) {
+      .edu {
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 300px;
+      }
+      .edu .item:nth-child(1) {
+        grid-row: 1;
+      }
+      .edu .item:nth-child(3) {
+        grid-column: 1;
+      }
+    }
+    @media screen and (max-width: 820px) {
+      .edu {
+        grid-template-columns: 1fr;
+        grid-auto-flow: 260px;
+      }
     }
   </style>
   <body>
