한화이글스클론 1차

--- a/삼성중공업grid.html
+++ b/삼성중공업grid.html
@@ -44,7 +44,6 @@
       z-index: 1;
     }
     .grid .item .txt1 {
-			background-size: ;
 			height: 207px;
 			padding-right: 200px;
 			background-repeat: no-repeat;
@@ -52,8 +51,12 @@
 			width: 100%;
 			display: grid;
 			width: 570px;
-			top: 0;
       color: #000;
+      
+      
+    }
+    .grid .item .txt1 .txt2 {
+      color: #666;
     }
     .grid .item .txt1:nth-child(1) {
       background-image: url(https://www.samsungshi.com/images/main/icon_source.png);
@@ -131,21 +134,21 @@
       <div class="item">
         <div class="txt1">
           <h1>오픈소싱</h1>
-          <p>
+          <p class="txt2">
             내부 심의를 통해 선정된 업체는 당사의 <br />
             아웃소싱 데이터베이스로 관리합니다.
           </p>
         </div>
         <div class="txt1">
           <h1>오픈소싱</h1>
-          <p>
+          <p class="txt2">
             내부 심의를 통해 선정된 업체는 당사의 <br />
             아웃소싱 데이터베이스로 관리합니다.
           </p>
         </div>
         <div class="txt1">
           <h1>오픈소싱</h1>
-          <p>
+          <p class="txt2">
             내부 심의를 통해 선정된 업체는 당사의 <br />
             아웃소싱 데이터베이스로 관리합니다.
           </p>
