--- a/한화이글스클론페이지.html
+++ b/한화이글스클론페이지.html
@@ -10,6 +10,14 @@
       margin: 0;
       padding: 0;
     }
+  .logo video {
+    width: 1913px;
+    height: 1080px;
+    width: 100%;
+  
+
+  }
+  
   </style>
   <body>
    <section>
@@ -17,16 +25,16 @@
 		<div>
 			<ul class="logo">
 				<li>
-					<a href="">
+					<a href="HANHWA EAGLES">
 						<img src="https://www.hanwhaeagles.co.kr/images/common/h_logo.png" alt="">
 					</a>
 				</li>
-				<li><a href=""></a>EAGLES</li>
-				<li><a href=""></a>PLAYERS</li>
-				<li><a href=""></a>GAME</li>
-				<li><a href=""></a>FAN</li>
-				<li><a href=""></a>SHOP</li>
-				<li><a href=""></a>TICKET</li>
+				<li><a href="#">EAGLES</a></li>
+				<li><a href="#">PLAYERS</a></li>
+				<li><a href="#">GAME</a></li>
+				<li><a href="#">FAN</a></li>
+				<li><a href="#">SHOP</a></li>
+				<li><a href="#">TICKET</a></li>
          <video autoplay muted loop playsinline>
       <source src="./video/movie_eagles.mp4" >
 
