--- a/자바스크립트/251022.html
+++ b/자바스크립트/251022.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>자바스크립트시작</title>
+    <script>
+      document.title = "연습";
+    </script>
+  </head>
+  <body>
+    <script>
+      // document.title = "test";
+      // console.log("자바스크립트");
+      // console.log("123" + 123);
+      // console.log(123 + 123);
+      console.log("1.1.1" + 123 + "\N" + 555);
+			// window.alert("경고창");
+    </script>
+  </body>
 </html>
