--- a/html&css/한화이글스클론페이지2.html
+++ b/html&css/한화이글스클론페이지2.html
@@ -50,6 +50,7 @@
         background: rgba(0, 0, 0, 0.8);
         padding: 15px 0;
         border: 1px solid #b3b3b3;
+        
       }
       .txt {
         font-family: "01HanwhaB";
@@ -132,11 +133,11 @@
           </li>
           <li><a href="#">EAGLES</a>
                 <ul class="submenu">
-                  <li><a href="">구단소개</a></li>
-                  <li><a href="">그룹사소개</a></li>
-                  <li><a href="">HISTORY</a></li>
-                  <li><a href="">대전 한화생명볼파크</a></li>
-                  <li><a href="">사회공헌</a></li>
+                  <li><a href="#">구단소개</a></li>
+                  <li><a href="#">그룹사소개</a></li>
+                  <li><a href="#">HISTORY</a></li>
+                  <li><a href="#">대전 한화생명볼파크</a></li>
+                  <li><a href="#">사회공헌</a></li>
                 </ul>
               </li>
           <li><a href="#">PLAYERS</a></li>
@@ -155,6 +156,9 @@
             </ul>
           </header>
         </body>
+        <script>
+          
+        </script>
       </header>
     </section>
 </html>
