--- a/html&css/한화이글스클론페이지3.html
+++ b/html&css/한화이글스클론페이지3.html
@@ -15,6 +15,14 @@
         padding: 0;
         
       }
+      ul {
+        list-style: none;
+      }
+      a{
+        text-decoration: none;
+        font-size:18px;
+        color: #fff;
+      }
       body {
         font-family: "AlfaSlabOne", sans-serif;
       }
