--- a/html&css/한화이글스클론페이지3.html
+++ b/html&css/한화이글스클론페이지3.html
@@ -3,146 +3,269 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>한화이글스 클론</title>
+    <title>한화이글스</title>
+
     <style>
       @font-face {
-        font-family: "AlfaSlabOne";
-        src: url(./AlfaSlabOne-Regular.ttf);
+        font-family: "01HanwhaB";
+        src: url("./01HanwhaB.ttf");
       }
 
       * {
         margin: 0;
         padding: 0;
-        
       }
-      ul {
-        list-style: none;
-      }
-      a{
-        text-decoration: none;
-        font-size:18px;
-        color: #fff;
-      }
+      html,
       body {
-        font-family: "AlfaSlabOne", sans-serif;
+        overflow: hidden;
+        height: 100%;
       }
 
-      section {
-        position: relative;
-        width: 100%;
-        height: 100vh;
-        overflow: hidden;
+      body {
+        background-color: #0a1320;
+        font-family: "01HanwhaB", sans-serif;
+        color: #fff;
       }
+
+      header {
+        width: 100%;
+        background: #000;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 60px;
+        height: 80px;
+        position: relative;
+        border-bottom: 1px solid #b3b3b3;
+        background: rgba(0, 0, 0, 0.6);
+      }
+
       video.bg-video {
+        display: flex;
+        /* margin: 0;
+				padding: 0; */
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
         object-fit: cover;
         z-index: -1;
       }
 
-      header {
-        position: relative;
-        z-index: 10;
+      .logo img {
+        box-sizing: border-box;
+        width: 90px;
+        height: auto;
+        vertical-align: middle;
+      }
+
+      .main-menu {
         display: flex;
-        justify-content: space-between;
         align-items: center;
-        padding: 15px 50px;
-        background: rgba(0, 0, 0, 0.7);
-      }
-
-      header ul {
-        display: flex;
-        list-style: none;
-        gap: 40px;
-      }
-
-      header li {
+        gap: 60px;
+        justify-content: flex-start;
         position: relative;
       }
-      header li a {
+
+      .main-menu li {
+        list-style: none;
+        position: relative;
+      }
+
+      .main-menu a {
         text-decoration: none;
-        color: #fff;
+        color: #ddd;
         font-size: 18px;
-        font-weight: bold;
+        transition: 0.2s;
       }
 
-      .submenu {
-        display: none;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        background: rgba(0, 0, 0, 0.8);
-        padding: 10px 0;
-        border-radius: 10px;
-      }
-
-      li:hover .submenu {
-        display: block;
-      }
-      .submenu li {
-        padding: 5px 20px;
-      }
-      .submenu li a {
-        font-weight: normal;
-      }
-      li a:hover,
-      .submenu li a:hover {
+      .main-menu a:hover {
         color: orange;
       }
 
-      @media (max-width: 768px) {
-        header ul {
-          flex-wrap: wrap;
-          gap: 20px;
+      .submenu {
+        display: flex;
+        gap: 40px;
+        width: max-content;
+        flex-direction: row;
+        position: absolute;
+        justify-content: flex-start;
+        opacity: 0;
+        visibility: hidden;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background: rgba(0, 0, 0, 0.6);
+        padding: 12px 40px;
+        border-top: 2px solid orange;
+        z-index: 50;
+        transition: all 0.3s ease;
+        transform: translateY(-10px);
+      }
+      .submenu.show {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+      }
+
+      .submenu li {
+        width: auto;
+      }
+
+      .submenu a {
+        color: #fff;
+        white-space: nowrap;
+        font-size: 16px;
+      }
+
+      .submenu a:hover {
+        color: orange;
+      }
+
+      .main-menu li:hover .submenu {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+      }
+
+      .right-menu {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        font-size: 15px;
+      }
+
+      .right-menu a {
+        color: #b3b3b3;
+        text-decoration: none;
+      }
+
+      .right-menu a:hover {
+        color: orange;
+      }
+
+      @media (max-width: 1024px) {
+        header {
+          flex-direction: column;
+          height: auto;
+          padding: 20px;
         }
-        header img {
-          width: 45px;
+
+        .main-menu {
+          gap: 25px;
+          flex-wrap: wrap;
+        }
+
+        .submenu {
+          position: static;
+          flex-direction: column;
+          background: #111;
+          border-top: none;
+          width: 100%;
+        }
+
+        .submenu li {
+          width: 100%;
         }
       }
     </style>
   </head>
+
   <body>
+    <header>
+      <div class="logo">
+        <a
+          href="http://127.0.0.1:5500/html&css/%ED%95%9C%ED%99%94%EC%9D%B4%EA%B8%80%EC%8A%A4%ED%81%B4%EB%A1%A0%ED%8E%98%EC%9D%B4%EC%A7%803.html"
+        >
+          <img
+            src="https://www.hanwhaeagles.co.kr/images/common/h_logo.png"
+            alt="Eagles Logo"
+          />
+        </a>
+      </div>
+
+      <ul class="main-menu">
+        <li>
+          <a href="#">EAGLES</a>
+          <ul class="submenu">
+            <li><a href="#">구단소개</a></li>
+            <li><a href="#">그룹사소개</a></li>
+            <li><a href="#">HISTORY</a></li>
+            <li><a href="#">대전 한화생명 볼파크</a></li>
+            <li><a href="#">사회공헌</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">PLAYERS</a>
+          <ul class="submenu">
+            <li><a href="#">코칭스텝</a></li>
+            <li><a href="#">투수</a></li>
+            <li><a href="#">포수</a></li>
+            <li><a href="#">내야수</a></li>
+            <li><a href="#">외야수</a></li>
+            <li><a href="#">군입대 선수</a></li>
+            <li><a href="#">응원단</a></li>
+            <li><a href="#">STAFF</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">GAME</a>
+          <ul class="submenu">
+            <li><a href="#">1군 경기일정</a></li>
+            <li><a href="#">퓨처스 경기일정</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">FAN</a>
+          <ul class="submenu">
+            <li><a href="#">구단경기</a></li>
+            <li><a href="#">키즈클럽</a></li>
+            <li><a href="#">펜 타임즈</a></li>
+            <li><a href="#">갤러리</a></li>
+            <li><a href="#">이글스 아카이브</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">SHOP</a>
+        </li>
+        <li>
+          <a href="#">TICKET</a>
+        </li>
+      </ul>
+
+      <div class="right-menu">
+        <a href="#">좌석뷰 확인하기</a>
+        <a href="#">KO</a> |
+        <a href="#">EN</a>
+        <a href="#">LOGIN</a>
+        <a href="#">JOIN US</a>
+      </div>
+    </header>
+
     <section>
       <video class="bg-video" autoplay muted loop playsinline>
         <source src="./video/movie_eagles.mp4" type="video/mp4" />
       </video>
-      <header>
-        <ul class="logo">
-          <li>
-            <a href="#"
-              ><img
-                src="https://www.hanwhaeagles.co.kr/images/common/h_logo.png"
-                alt="Eagles Logo"
-                width="92"
-            /></a>
-          </li>
-          <li>
-            <a href="#">EAGLES</a>
-            <ul class="submenu">
-              <li><a href="#">구단소개</a></li>
-              <li><a href="#">그룹사소개</a></li>
-              <li><a href="#">HISTORY</a></li>
-              <li><a href="#">대전 한화생명볼파크</a></li>
-              <li><a href="#">사회공헌</a></li>
-            </ul>
-          </li>
-          <li><a href="#">PLAYERS</a></li>
-          <li><a href="#">GAME</a></li>
-          <li><a href="#">FAN</a></li>
-          <li><a href="#">SHOP</a></li>
-          <li><a href="#">TICKET</a></li>
-        </ul>
-        <ul class="txt">
-          <li><a href="#">좌석뷰 확인하기</a></li>
-          <li><a href="#">KO</a></li>
-          <li><a href="#">EN</a></li>
-          <li><a href="#">LOGIN</a></li>
-          <li><a href="#">JOIN US</a></li>
-        </ul>
-      </header>
     </section>
+    <script>
+      const menuItems = document.querySelectorAll(".main-menu > li");
+
+      menuItems.forEach((item) => {
+        const submenu = item.querySelector(".submenu");
+        item.addEventListener("click", (e) => {
+          e.stopPropagation();
+          document
+            .querySelectorAll(".submenu")
+            .forEach((sm) => sm.classList.remove("show"));
+          if (submenu) submenu.classList.add("show");
+        });
+      });
+
+      document.addEventListener("click", () => {
+        document
+          .querySelectorAll(".submenu")
+          .forEach((sm) => sm.classList.remove("show"));
+      });
+    </script>
   </body>
 </html>
