--- a/html&css/한화이글스클론페이지2.html
+++ b/html&css/한화이글스클론페이지2.html
@@ -17,7 +17,11 @@
 
       html,
       body {
-        overflow: hidden;
+        margin: 0;
+        padding: 0;
+
+        overflow-x: hidden;
+        overflow-y: auto;
         height: 100%;
       }
 
@@ -25,6 +29,20 @@
         background-color: #0a1320;
         font-family: "01HanwhaB", sans-serif;
         color: #fff;
+      }
+      section {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+      .bg-video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;z-index: -1;
       }
 
       header {
@@ -41,7 +59,6 @@
         overflow: visible;
       }
 
-      
       .header-left {
         display: flex;
         align-items: center;
@@ -76,7 +93,6 @@
       .main-menu a:hover {
         color: orange;
       }
-
 
       .submenu {
         display: flex;
@@ -164,7 +180,6 @@
 
   <body>
     <header>
-
       <div class="header-left">
         <div class="logo">
           <a href="#">
@@ -221,7 +236,6 @@
         </ul>
       </div>
 
-    
       <div class="right-menu">
         <a href="#">좌석뷰 확인하기</a>
         <a href="#">KO</a> |
