--- a/html&css/한화이글스클론페이지3.html
+++ b/html&css/한화이글스클론페이지3.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>한화이글스</title>
-
     <style>
       @font-face {
         font-family: "01HanwhaB";
@@ -14,10 +13,11 @@
       * {
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
       }
+
       html,
       body {
-        overflow: hidden;
         height: 100%;
       }
 
@@ -25,35 +25,31 @@
         background-color: #0a1320;
         font-family: "01HanwhaB", sans-serif;
         color: #fff;
+        overflow-x: hidden;
       }
 
       header {
         width: 100%;
-        background: #000;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0 60px;
         height: 80px;
-        position: relative;
-        border-bottom: 1px solid #b3b3b3;
+        border-bottom: 1px solid #fff;
         background: rgba(0, 0, 0, 0.6);
-      }
-
-      video.bg-video {
-        display: flex;
-        /* margin: 0;
-				padding: 0; */
-        position: absolute;
+        padding: 0 40px;
+        position: fixed;
         top: 0;
         left: 0;
-        width: 100%;
-        object-fit: cover;
-        z-index: -1;
+        z-index: 100;
+      }
+
+      .header-left {
+        display: flex;
+        align-items: center;
+        gap: 60px;
       }
 
       .logo img {
-        box-sizing: border-box;
         width: 90px;
         height: auto;
         vertical-align: middle;
@@ -62,9 +58,16 @@
       .main-menu {
         display: flex;
         align-items: center;
-        gap: 60px;
-        justify-content: flex-start;
+        gap: 40px;
         position: relative;
+        width: 100vh;
+        background: rgba(0, 0, 0, 0.8);
+        padding: 12px 40px;
+
+        margin: 0;
+        border-top: none;
+
+        z-index: 50;
       }
 
       .main-menu li {
@@ -82,34 +85,31 @@
       .main-menu a:hover {
         color: orange;
       }
-
-      .submenu {
-        display: flex;
-        gap: 40px;
-        width: max-content;
-        flex-direction: row;
-        position: absolute;
-        justify-content: flex-start;
-        opacity: 0;
-        visibility: hidden;
-        top: 100%;
-        left: 0;
-        right: 0;
-        background: rgba(0, 0, 0, 0.6);
-        padding: 12px 40px;
-        border-top: 2px solid orange;
-        z-index: 50;
-        transition: all 0.3s ease;
-        transform: translateY(-10px);
-      }
-      .submenu.show {
+      .main-menu li:hover .submenu {
         opacity: 1;
         visibility: visible;
         transform: translateY(0);
       }
 
+      .submenu {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        gap: 40px;
+        position: absolute;
+        top: 55px;
+        left: 0;
+        background: rgba(0, 0, 0, 0.6);
+        padding: 12px 20px;
+        border-top: 2px solid #000;
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(0);
+        transition: all 0.3s ease;
+      }
+
       .submenu li {
-        width: auto;
+        list-style: none;
       }
 
       .submenu a {
@@ -120,12 +120,6 @@
 
       .submenu a:hover {
         color: orange;
-      }
-
-      .main-menu li:hover .submenu {
-        opacity: 1;
-        visibility: visible;
-        transform: translateY(0);
       }
 
       .right-menu {
@@ -141,7 +135,46 @@
       }
 
       .right-menu a:hover {
-        color: orange;
+        color: #fff;
+      }
+
+      section {
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+        margin-top: 80px;
+      }
+      .social-media {
+        position: absolute;
+        right: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        z-index: 10;
+      }
+      .social-media img {
+        display: block;
+        position: relative;
+        width: 56px;
+        height: 56px;
+        border: 1px solid #000;
+        background-color: #000;
+        border-radius: 50%;
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+
+      .bg-video {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transform: translate(-50%, -50%);
       }
 
       @media (max-width: 1024px) {
@@ -151,9 +184,17 @@
           padding: 20px;
         }
 
+        .header-left {
+          flex-direction: column;
+        }
+
         .main-menu {
-          gap: 25px;
+          flex-direction: column;
+          width: 100%;
+          margin-left: 0;
+          padding: 10px 0;
           flex-wrap: wrap;
+          justify-content: center;
         }
 
         .submenu {
@@ -161,11 +202,11 @@
           flex-direction: column;
           background: #111;
           border-top: none;
-          width: 100%;
+          padding: 10px 0;
         }
 
-        .submenu li {
-          width: 100%;
+        section {
+          margin-top: 0;
         }
       }
     </style>
@@ -173,65 +214,61 @@
 
   <body>
     <header>
-      <div class="logo">
-        <a
-          href="http://127.0.0.1:5500/html&css/%ED%95%9C%ED%99%94%EC%9D%B4%EA%B8%80%EC%8A%A4%ED%81%B4%EB%A1%A0%ED%8E%98%EC%9D%B4%EC%A7%803.html"
-        >
-          <img
-            src="https://www.hanwhaeagles.co.kr/images/common/h_logo.png"
-            alt="Eagles Logo"
-          />
-        </a>
-      </div>
+      <div class="header-left">
+        <div class="logo">
+          <a href="#">
+            <img
+              src="https://www.hanwhaeagles.co.kr/images/common/h_logo.png"
+              alt="Eagles Logo"
+            />
+          </a>
+        </div>
 
-      <ul class="main-menu">
-        <li>
-          <a href="#">EAGLES</a>
-          <ul class="submenu">
-            <li><a href="#">구단소개</a></li>
-            <li><a href="#">그룹사소개</a></li>
-            <li><a href="#">HISTORY</a></li>
-            <li><a href="#">대전 한화생명 볼파크</a></li>
-            <li><a href="#">사회공헌</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">PLAYERS</a>
-          <ul class="submenu">
-            <li><a href="#">코칭스텝</a></li>
-            <li><a href="#">투수</a></li>
-            <li><a href="#">포수</a></li>
-            <li><a href="#">내야수</a></li>
-            <li><a href="#">외야수</a></li>
-            <li><a href="#">군입대 선수</a></li>
-            <li><a href="#">응원단</a></li>
-            <li><a href="#">STAFF</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">GAME</a>
-          <ul class="submenu">
-            <li><a href="#">1군 경기일정</a></li>
-            <li><a href="#">퓨처스 경기일정</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">FAN</a>
-          <ul class="submenu">
-            <li><a href="#">구단경기</a></li>
-            <li><a href="#">키즈클럽</a></li>
-            <li><a href="#">펜 타임즈</a></li>
-            <li><a href="#">갤러리</a></li>
-            <li><a href="#">이글스 아카이브</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">SHOP</a>
-        </li>
-        <li>
-          <a href="#">TICKET</a>
-        </li>
-      </ul>
+        <ul class="main-menu">
+          <li>
+            <a href="#">EAGLES</a>
+            <ul class="submenu">
+              <li><a href="#">구단소개</a></li>
+              <li><a href="#">그룹사소개</a></li>
+              <li><a href="#">HISTORY</a></li>
+              <li><a href="#">대전 한화생명 볼파크</a></li>
+              <li><a href="#">사회공헌</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">PLAYERS</a>
+            <ul class="submenu">
+              <li><a href="#">코칭스텝</a></li>
+              <li><a href="#">투수</a></li>
+              <li><a href="#">포수</a></li>
+              <li><a href="#">내야수</a></li>
+              <li><a href="#">외야수</a></li>
+              <li><a href="#">군입대 선수</a></li>
+              <li><a href="#">응원단</a></li>
+              <li><a href="#">STAFF</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">GAME</a>
+            <ul class="submenu">
+              <li><a href="#">1군 경기일정</a></li>
+              <li><a href="#">퓨처스 경기일정</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">FAN</a>
+            <ul class="submenu">
+              <li><a href="#">구단경기</a></li>
+              <li><a href="#">키즈클럽</a></li>
+              <li><a href="#">펜 타임즈</a></li>
+              <li><a href="#">갤러리</a></li>
+              <li><a href="#">이글스 아카이브</a></li>
+            </ul>
+          </li>
+          <li><a href="#">SHOP</a></li>
+          <li><a href="#">TICKET</a></li>
+        </ul>
+      </div>
 
       <div class="right-menu">
         <a href="#">좌석뷰 확인하기</a>
@@ -243,29 +280,45 @@
     </header>
 
     <section>
-      <video class="bg-video" autoplay muted loop playsinline>
+      <video
+        class="bg-video"
+        autoplay
+        muted
+        loop
+        playsinline
+        controlslist="nodownload nofullscreen noremoteplayback "
+        disablepictureinpicture
+      >
         <source src="./video/movie_eagles.mp4" type="video/mp4" />
       </video>
+      <div class="social-media">
+        <a href="https://www.youtube.com/channel/UCdq4Ji3772xudYRUatdzRrg"
+          ><img
+            src="https://www.hanwhaeagles.co.kr/images/common/ico_youtube.png"
+            alt="YouTube 바로가기"
+        /></a>
+        <a href="https://www.facebook.com/hanwhaeagles.news/"
+          ><img
+            src="https://www.hanwhaeagles.co.kr/images/common/ico_facebook.png"
+            alt="facebook"
+        /></a>
+        <a
+          href="https://www.instagram.com/accounts/login/?next=%2Fhanwhaeagles_soori%2F&source=omni_redirect"
+          ><img
+            src="https://www.hanwhaeagles.co.kr/images/common/ico_instagram.png"
+            alt="Instagram"
+        /></a>
+        <a href="https://x.com/hoodi_thespace/"
+          ><img
+            src="https://www.hanwhaeagles.co.kr/images/common/ico_twitter.png"
+            alt="X"
+        /></a>
+        <a href="https://kr.pinterest.com/hanwhaeagles1985/_saved/"
+          ><img
+            src="https://www.hanwhaeagles.co.kr/images/common/ico_pinterest.png"
+            alt="Pinterest"
+        /></a>
+      </div>
     </section>
-    <script>
-      const menuItems = document.querySelectorAll(".main-menu > li");
-
-      menuItems.forEach((item) => {
-        const submenu = item.querySelector(".submenu");
-        item.addEventListener("click", (e) => {
-          e.stopPropagation();
-          document
-            .querySelectorAll(".submenu")
-            .forEach((sm) => sm.classList.remove("show"));
-          if (submenu) submenu.classList.add("show");
-        });
-      });
-
-      document.addEventListener("click", () => {
-        document
-          .querySelectorAll(".submenu")
-          .forEach((sm) => sm.classList.remove("show"));
-      });
-    </script>
   </body>
 </html>
