--- a/html&css/한화이글스클론페이지3.html
+++ b/html&css/한화이글스클론페이지3.html
@@ -77,7 +77,7 @@
 
       .main-menu a {
         text-decoration: none;
-        color: #ddd;
+        color: #fff;
         font-size: 18px;
         transition: 0.2s;
       }
