--- a/html&css/트랜지션7.html
+++ b/html&css/트랜지션7.html
@@ -29,10 +29,13 @@
 			background: red;
 			margin: 20px;
 			transition: 1s;
+
+			
+			
 		}
 		div{
-			/* opacity: 0; */
-			/* display: none; */
+			 opacity: 0; 
+			 display: none; 
 		}
 		div:hover {
 			height: 100px;
