--- a/html&css/한화이글스클론페이지3.html
+++ b/html&css/한화이글스클론페이지3.html
@@ -21,6 +21,10 @@
         color: #fff;
         overflow-x: hidden;
       }
+      a {
+        text-decoration: none;
+        color: #ccc;
+      }
 
       header {
         width: 100%;
@@ -29,9 +33,8 @@
         justify-content: space-between;
         height: 80px;
         border-bottom: 1px solid #fff;
-        background: rgba(0, 0, 0, 0.6);
         padding: 0 40px;
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
         z-index: 100;
@@ -93,6 +96,7 @@
         top: 55px;
         left: 0;
         background: rgba(0, 0, 0, 0.6);
+
         padding: 12px 20px;
         border-top: 2px solid #000;
         opacity: 0;
@@ -162,42 +166,79 @@
 
       .bg-video {
         position: absolute;
-        top: 50%;
-        left: 50%;
         width: 100%;
         height: 100%;
+        background: #000;
         object-fit: cover;
-        transform: translate(-50%, -50%);
+        z-index: 1;
       }
       .auto-slide {
-        overflow: hidden;
+        position: relative;
         width: 100%;
-        background: #000;
-        padding: 40px 0;
+        overflow: hidden;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
       }
 
       .slide-track {
         display: flex;
-        gap: 20px;
+        width: max-content;
+        animation: scroll 80s linear infinite;
       }
 
       .slide-track img {
-        width: 712px;
-        height: 680px;
-        object-fit: cover;
-        filter: brightness(60%);
-        transition: filter 0.3s ease;
+        width: 718px;
+        height: auto;
+        margin: 0 25px;
+        border-radius: 10px;
+        transition: transform 0.3s;
       }
 
       .slide-track img:hover {
-        filter: brightness(100%);
+        transform: scale(1.05);
+      }
+      .gallery_btn {
+        display: flex;
+        justify-content: center;
       }
 
+      .btn {
+        display: inline-block;
+        overflow: hidden;
+        height: 62px;
+        line-height: 62px;
+        padding: 0 52px;
+        position: relative;
+        font-size: 16px;
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        border-radius: 10px;
+        z-index: 1;
+      }
+      .btn::before {
+        content: "";
+        position: absolute;
+        width: 0;
+        height: 100%;
+        left: 0;
+        top: 0;
+      background: rgba(243, 115, 33, 0.8);
+        transition: 0.5s;
+      }
+      .btn > a{
+        position: relative;
+        z-index: 2;
+      } 
+       .btn:hover:before{
+        width: 100%;
+       }
       @keyframes scroll {
-        0% {
+        from {
           transform: translateX(0);
         }
-        100% {
+        to {
           transform: translateX(-50%);
         }
       }
@@ -370,19 +411,12 @@
         <img src="../images/채은성.png" alt="" />
       </div>
     </section>
-    <script>
-      const track = document.getElementById("slideTrack");
-      let scrollAmount = 0;
+    <div class="gallery_btn">
+      <p class="btn">
+        <a href="">GO TO GALLERY</a>
+      </p>
+    </div>
 
-      function slide() {
-        scrollAmount -= 1; // 이동 속도 조절
-        track.style.transform = `translateX(${scrollAmount}px)`;
-
-      }
-
-      // 처음 이미지 세트 복제 (무한 루프 효과)
-      track.innerHTML += track.innerHTML;
-      requestAnimationFrame(slide);
-    </script>
+    <script></script>
   </body>
 </html>
