--- a/html&css/한화이글스클론페이지3.html
+++ b/html&css/한화이글스클론페이지3.html
@@ -224,16 +224,122 @@
         height: 100%;
         left: 0;
         top: 0;
-      background: rgba(243, 115, 33, 0.8);
+        background: rgba(243, 115, 33, 0.8);
         transition: 0.5s;
       }
-      .btn > a{
+      .btn > a {
         position: relative;
         z-index: 2;
-      } 
-       .btn:hover:before{
+      }
+      .btn:hover:before {
         width: 100%;
-       }
+      }
+      .news-section {
+        width: 100%;
+        background: #000;
+        padding: 100px 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .news-container {
+        display: flex;
+        gap: 40px;
+        justify-content: center;
+        flex-wrap: wrap;
+        width: 80%;
+        margin-bottom: 60px;
+      }
+
+      .news-card {
+        width: 392px;
+        
+        background: #000;
+        color: #fff;
+        text-align: left;
+      }
+
+      .news-card img {
+      
+        width: 100%;
+        border-radius: 10px;
+        transition: transform 0.3s ease;
+      }
+
+      .news-card img:hover {
+        transform: scale(1.05);
+      }
+
+      .news-card .date {
+        color: #aaa;
+        font-size: 14px;
+        margin-top: 15px;
+      }
+
+      .news-card h3 {
+        font-size: 18px;
+        line-height: 1.5;
+        margin: 8px 0;
+      }
+
+      .news-card .desc {
+        font-size: 24px;
+        color: #bbb;
+        margin-bottom: 10px;
+      }
+
+      .news-card .readmore {
+        color: #ff7b00;
+        font-size: 18px;
+        font-weight: bold;
+        text-decoration: none;
+        transition: 0.2s;
+      }
+
+      .news-card .readmore:hover {
+        color: #fff;
+      }
+
+      .news-btn {
+        display: flex;
+        justify-content: center;
+      }
+
+      .news-btn .btn {
+        display: inline-block;
+        overflow: hidden;
+        height: 62px;
+        line-height: 62px;
+        padding: 0 52px;
+        position: relative;
+        font-size: 16px;
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        border-radius: 10px;
+        z-index: 1;
+      }
+
+      .news-btn .btn::before {
+        content: "";
+        position: absolute;
+        width: 0;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: rgba(243, 115, 33, 0.8);
+        transition: 0.5s;
+      }
+
+      .news-btn .btn:hover::before {
+        width: 100%;
+      }
+
+      .news-btn .btn a {
+        position: relative;
+        color: #fff;
+        text-decoration: none;
+        z-index: 2;
+      }
       @keyframes scroll {
         from {
           transform: translateX(0);
@@ -416,6 +522,49 @@
         <a href="">GO TO GALLERY</a>
       </p>
     </div>
+    <section class="news-section">
+      <div class="news-container">
+        <div class="news-card">
+          <img src="../images/btn.jpg" alt="" />
+          <p class="date">2025-10-11</p>
+          <h3>한화이글스, 팀 스토리 담은 2025 <br>
+             포스트시즌 캠페인</h3>
+          <p class="desc">
+            한화이글스가 포스트시즌을 앞두고 그간의 여정과 팀...
+          </p>
+          <a href="#" class="readmore">READ MORE</a>
+        </div>
+
+        <div class="news-card">
+          <img src="../images/btn2.jpg" alt="플레이오프 시구" />
+          <p class="date">2025-10-16</p>
+          <h3>
+            플레이오프 1차전 시구에 배우 김재욱,<br />2차전은 가수 겸 배우
+            권유리
+          </h3>
+          <p class="desc">
+            한화이글스는 배우 김재욱과 가수 겸 배우 권유리를...
+          </p>
+          <a href="#" class="readmore">READ MORE</a>
+        </div>
+
+        <div class="news-card">
+          <img src="./images/hello_future.jpg" alt="Hello Future" />
+          <p class="date">2025-10-12</p>
+          <h3>
+            헬로 퓨쳐!(Hello Future!), 2026 한화이글스 신인선수 입단식 개최
+          </h3>
+          <p class="desc">
+            "새벽훈련을 위해 일어났을 때 하루도 거르지 않고 항상..."
+          </p>
+          <a href="#" class="readmore">READ MORE</a>
+        </div>
+      </div>
+
+      <div class="news-btn">
+        <p class="btn"><a href="#">VIEW ALL NEWS</a></p>
+      </div>
+    </section>
 
     <script></script>
   </body>
