--- a/html&css/한화이글스클론페이지3.html
+++ b/html&css/한화이글스클론페이지3.html
@@ -254,14 +254,14 @@
 
       .news-card {
         width: 392px;
-        
+
         background: #000;
         color: #fff;
         text-align: left;
       }
 
       .news-card img {
-      
+        height: 270px;
         width: 100%;
         border-radius: 10px;
         transition: transform 0.3s ease;
@@ -290,11 +290,12 @@
       }
 
       .news-card .readmore {
-        color: #ff7b00;
+        color: #808080;
         font-size: 18px;
         font-weight: bold;
         text-decoration: none;
         transition: 0.2s;
+        border-bottom: 1px solid #808080;
       }
 
       .news-card .readmore:hover {
@@ -313,7 +314,7 @@
         line-height: 62px;
         padding: 0 52px;
         position: relative;
-        font-size: 16px;
+        font-size: 10px;
         border: 1px solid rgba(255, 255, 255, 0.5);
         border-radius: 10px;
         z-index: 1;
@@ -527,8 +528,10 @@
         <div class="news-card">
           <img src="../images/btn.jpg" alt="" />
           <p class="date">2025-10-11</p>
-          <h3>한화이글스, 팀 스토리 담은 2025 <br>
-             포스트시즌 캠페인</h3>
+          <h3>
+            한화이글스, 팀 스토리 담은 2025 <br />
+            포스트시즌 캠페인
+          </h3>
           <p class="desc">
             한화이글스가 포스트시즌을 앞두고 그간의 여정과 팀...
           </p>
@@ -549,7 +552,7 @@
         </div>
 
         <div class="news-card">
-          <img src="./images/hello_future.jpg" alt="Hello Future" />
+          <img src="../images/btn3.jpg" alt="Hello Future" />
           <p class="date">2025-10-12</p>
           <h3>
             헬로 퓨쳐!(Hello Future!), 2026 한화이글스 신인선수 입단식 개최
@@ -567,5 +570,19 @@
     </section>
 
     <script></script>
+    <footer>
+      <h1>
+        <a href="#">Hanwha Eagles </a>
+        <div class="footer_eagles">
+          <ul>
+            <li>대전광역시 중구 대종로 377 한화이글스</li>
+            <li>대표이사 박종태</li>
+            <li>사업자등록번호 306-81-12757</li>
+          </ul>
+          <p>TEL 042-630-8200</p>
+          <p>FAX 042-632-2929</p>
+        </div>
+      </h1>
+    </footer>
   </body>
 </html>
