--- a/html&css/가로메뉴.html
+++ b/html&css/가로메뉴.html
@@ -24,54 +24,52 @@
       display: flex;
       height: 50px;
     }
-		.menu > ul > li{
-			position: relative;
-			flex: 1;
-			text-align: center;
-		}
-		.menu > ul > li > a {
-
-			display: block;
-			width: 100%;
-			height: 100%;
-			line-height: 50px;
-			border: 1px solid #333;
-			border-left: none;
-			box-sizing: border-box;
-		}
-		.menu > ul > li:first-child > a{
-				border: 1px solid #333;
-		}
-		.menu > ul > li:last-child .sub{
-			border-right: 1px solid #333;
-		}
-			.menu > ul > li .sub{
-				width: 100%;
-				position: absolute;
-				left: 0;
-				top: 52px;
-				background: #fff;
-				border-bottom: 1px solid #333;
-				height: 0;
-				overflow: hidden;
-				transition: 0.5s;
-			}
-			.menu > ul > li:first-child .sub{
-				border-left: 1px solid #333;
-			}
-			.menu > ul > li .sub li a {
-				line-height: 30px;
-			}
-				.menu > ul:hover > li .sub{
-					height: 120px; border-bottom: 1px solid #333;
-				} 
-				.menu > ul > li:hover > a,
-				.menu > ul > li .sub li a:hover{
-					background: #333;
-					color: #fff;
-				}
-			
-				
+    .menu > ul > li {
+      position: relative;
+      flex: 1;
+      text-align: center;
+    }
+    .menu > ul > li > a {
+      display: block;
+      width: 100%;
+      height: 100%;
+      line-height: 50px;
+      border: 1px solid #333;
+      border-left: none;
+      box-sizing: border-box;
+    }
+    .menu > ul > li:first-child > a {
+      border: 1px solid #333;
+    }
+    .menu > ul > li:last-child .sub {
+      border-right: 1px solid #333;
+    }
+    .menu > ul > li .sub {
+      width: 100%;
+      position: absolute;
+      left: 0;
+      top: 52px;
+      background: #fff;
+      border-bottom: 1px solid #333;
+      height: 0;
+      overflow: hidden;
+      transition: 0.5s;
+    }
+    .menu > ul > li:first-child .sub {
+      border-left: 1px solid #333;
+    }
+    .menu > ul > li .sub li a {
+      line-height: 30px;
+    }
+    .menu > ul:hover > li .sub {
+      height: 120px;
+      border-bottom: 1px solid #333;
+    }
+    .menu > ul > li:hover > a,
+    .menu > ul > li .sub li a:hover {
+      background: #333;
+      color: #fff;
+    }
   </style>
   <body>
     <div class="menu">
