--- a/html&css/한화이글스클론페이지3.html
+++ b/html&css/한화이글스클론페이지3.html
@@ -254,14 +254,14 @@
 
       .news-card {
         width: 392px;
-        
+
         background: #000;
         color: #fff;
         text-align: left;
       }
 
       .news-card img {
-      
+        height: 270px;
         width: 100%;
         border-radius: 10px;
         transition: transform 0.3s ease;
@@ -287,14 +287,18 @@
         font-size: 24px;
         color: #bbb;
         margin-bottom: 10px;
+   
       }
 
       .news-card .readmore {
-        color: #ff7b00;
+
+        color: #808080;
         font-size: 18px;
         font-weight: bold;
         text-decoration: none;
         transition: 0.2s;
+        border-bottom: 1px solid #808080;
+
       }
 
       .news-card .readmore:hover {
@@ -313,7 +317,7 @@
         line-height: 62px;
         padding: 0 52px;
         position: relative;
-        font-size: 16px;
+        font-size: 10px;
         border: 1px solid rgba(255, 255, 255, 0.5);
         border-radius: 10px;
         z-index: 1;
@@ -527,8 +531,10 @@
         <div class="news-card">
           <img src="../images/btn.jpg" alt="" />
           <p class="date">2025-10-11</p>
-          <h3>한화이글스, 팀 스토리 담은 2025 <br>
-             포스트시즌 캠페인</h3>
+          <h3>
+            한화이글스, 팀 스토리 담은 2025 <br />
+            포스트시즌 캠페인
+          </h3>
           <p class="desc">
             한화이글스가 포스트시즌을 앞두고 그간의 여정과 팀...
           </p>
@@ -549,7 +555,7 @@
         </div>
 
         <div class="news-card">
-          <img src="./images/hello_future.jpg" alt="Hello Future" />
+          <img src="../images/btn3.jpg" alt="Hello Future" />
           <p class="date">2025-10-12</p>
           <h3>
             헬로 퓨쳐!(Hello Future!), 2026 한화이글스 신인선수 입단식 개최
